syntax = "proto3";
package gateway;
import "model/model.proto";
option go_package = "github.com/liserc/open-socket/gateway";

message SingleMsgToUserResults {
  string userID =1;
  repeated SingleMsgToUserPlatform resp = 2;
  bool onlinePush = 3;

}

message OnlineBatchPushOneMsgReq{
  model.MsgData msgData = 1;
  repeated string pushToUserIDs = 2;
}

message OnlineBatchPushOneMsgResp{
  repeated SingleMsgToUserResults singlePushResult= 1;
}

message SingleMsgToUserPlatform{
  int64   ResultCode = 1;
  string  RecvID = 2;
  int32   RecvPlatFormID = 3;
}

service gateway {
  rpc OnlineBatchPushOneMsg(OnlineBatchPushOneMsgReq) returns(OnlineBatchPushOneMsgResp);
}
